# registration_api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docker/mockserver/: activation-codes.json
docs/: architecture.md
docs/decisions/: 0001-infrastructure-configuration.md  0002-domain-models.md  0003-user-repository.md  0004-registration-services.md  0005-fastapi-interface-layer.md  0006-test-and-ci-strategy.md
migrations/: 001_init.sql
scripts/ci/: docker_compose_e2e.py
src/registration/: __init__.py  config.py  main.py
src/registration/api/: __init__.py  dependencies.py  exception_handlers.py  schemas.py
src/registration/api/routes/: __init__.py  users.py
src/registration/domain/: __init__.py  exceptions.py  models.py
src/registration/infrastructure/: __init__.py  database.py  email.py
src/registration/repositories/: __init__.py  activation_codes.py  users.py
src/registration/services/: __init__.py  activation.py  authentication.py  codes.py  passwords.py  ports.py  registration.py  transactions.py
tests/integration/: conftest.py  test_repositories.py
tests/unit/: test_config.py  test_package.py
tests/unit/api/: __init__.py  test_main.py  test_users.py
tests/unit/domain/: __init__.py  test_exceptions.py  test_models.py
tests/unit/infrastructure/: __init__.py  test_database.py  test_email.py
tests/unit/repositories/: __init__.py  test_activation_codes.py  test_users.py
tests/unit/services/: __init__.py  fakes.py  test_activation.py  test_passwords.py  test_registration.py
