[project]
name = "registration-api"
version = "0.1.0"
description = "User registration and activation API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "pydantic[email]>=2.11",
    "pydantic-settings>=2.9",
    "tenacity>=9.1",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registration"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.1",
    "testcontainers[postgres]>=4.10",
    "time-machine>=2.16",
    "ruff>=0.11",
    "ty>=0.0.1a14",
    "pre-commit>=4.2",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Formatter conflicts
    "COM812",  # trailing-comma-missing
    "ISC001",  # implicit-str-concat
    # Project-wide pragmatic ignores
    "CPY001",  # copyright-notice — not required
    "TD",      # flake8-todos — not enforced at this stage
    "FIX",     # flake8-fixme — not enforced at this stage
    "D100",    # missing-docstring-in-public-module — module files are self-documenting
    "D104",    # missing-docstring-in-public-package — __init__.py files are structural
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is idiomatic in pytest
    "D",       # no docstrings required in tests
    "ANN",     # no annotation enforcement in tests
    "PLR2004", # magic values are fine in test assertions
    "SLF001",  # private-member-access is fine in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# ty
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.12"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
